--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,6 @@
-# 1. Dependencies (Third-party libraries)
-node_modules/
-jspm_packages/
 
-# 2. Environment & Secrets (CRITICAL for security)
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-*.secrets
+/node_modules
 
-# 3. Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/generated/prisma
 
-# 4. Build & Distribution
-dist/
-build/
-out/
-
-# System-specific files and editor configurations
-.DS_Store
-Thumbs.db
-.vscode/
-.idea/
-*.sublime-project
-*.sublime-workspace
-
-# 6. Test Coverage
-coverage/
-.nyc_output/
+/.env
