--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,15 +4,15 @@
     // File Layout
     // "rootDir": "./src",
     // "outDir": "./dist",
-    "module": "ESNext",
+
+    // Environment Settings
+    // See also https://aka.ms/tsconfig/module
+     "module": "ESNext",
     "moduleResolution": "node",
     "target": "ES2023",
     "strict": true,
     "esModuleInterop": true,
-    // "ignoreDeprecations": "6.0",
-    
-    // Environment Settings
-    // See also https://aka.ms/tsconfig/module
+    "ignoreDeprecations": "6.0",
     "types": [],
     // For nodejs:
     // "lib": ["esnext"],
