--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "tsx --watch ./src/app.ts",
+		"seed": "",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
@@ -12,6 +13,7 @@
 	"license": "ISC",
 	"type": "module",
 	"devDependencies": {
+		"@faker-js/faker": "^10.2.0",
 		"@types/node": "^25.0.3",
 		"prisma": "^7.2.0",
 		"tsx": "^4.21.0",
@@ -20,6 +22,8 @@
 	"dependencies": {
 		"@prisma/adapter-pg": "^7.2.0",
 		"@prisma/client": "^7.2.0",
+		"bcrypt": "^6.0.0",
+		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.3",
 		"express": "^5.2.1",
