--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,11 @@
     // "rootDir": "./src",
     // "outDir": "./dist",
 
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"] 
+    },
+
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
      "module": "ESNext",
@@ -12,7 +17,7 @@
     "target": "ES2023",
     "strict": true,
     "esModuleInterop": true,
-    "ignoreDeprecations": "6.0",
+    // "ignoreDeprecations": "6.0",
     "types": [],
     // For nodejs:
     // "lib": ["esnext"],
